--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <link rel="shortcut icon" href="logos/TWOSTEP S.png">
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+  <meta property="og:title" content="TwoStep" />
+  <meta property="og:description" content="Making the most stressful part of travel quick and easy."/>
+  <meta property="og:image" content="https://raw.githubusercontent.com/airfrance267286/twosteptravel.github.io/main/logos/TWOSTEP%20S.png"/>
   <script>
     document.onclick = () => applyCursorRippleEffect(event);
 
