--- a/services.html
+++ b/services.html
@@ -128,7 +128,7 @@
       <h1>How do I use the app?</h1>
       <h2>Tutorial</h2>
       <video width="50%" height="auto" controls>
-        <source src="pages/tutorial.MP4" type="video/MP4"/>
+        <source src="https://drive.google.com/uc?export=view&id=1qCe-fS6PyjNgt68XZzyYqv10iH9fmxND" type="video/MP4"/>
         Your browser does not support the video tag.
       </video>
       <h2>Airport map</h2>
