--- a/services.html
+++ b/services.html
@@ -6,6 +6,9 @@
   <link rel="shortcut icon" href="logos/TWOSTEP S.png">
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+  <meta property="og:title" content="TwoStep - Terms of Service" />
+  <meta property="og:description" content="Making the most stressful part of travel quick and easy."/>
+  <meta property="og:image" content="https://raw.githubusercontent.com/airfrance267286/twosteptravel.github.io/main/logos/TWOSTEP%20S.png"/>
   <style>
     #listBox{
       border: 2px solid black;
