--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
   <div class="center">
     <h2>Demo</h2>
     <video width="50%" height="auto" controls>
-      <source src="https://drive.google.com/uc?export=view&id=1tmHkVIh5jPmvfvv3WkhPQgixPit84olq" type="video/MP4"/>
+      <source src="http://twosteptravel.af267.repl.co/DemoVid.mov" type="video/MP4"/>
       Your browser does not support the video tag.
     </video>
   </div>
