--- a/index.html
+++ b/index.html
@@ -163,10 +163,12 @@
   </div>
   <div class="center">
     <h2>Demo</h2>
-    <video width="50%" height="auto" controls>
-      <source src="http://twosteptravel.af267.repl.co/DemoVid.mov" type="video/MP4"/>
-      Your browser does not support the video tag.
-    </video>
+    <div class="vidBorder">
+      <video width="100%" height="auto" controls>
+        <source src="http://twosteptravel.af267.repl.co/DemoVid.mov" type="video/MP4"/>
+        Your browser does not support the video tag.
+      </video>
+    </div>
   </div>
   <div class="center">
     <h2>Starting At</h2>
