--- a/services.html
+++ b/services.html
@@ -130,10 +130,12 @@
     <div class="qbox" id="q4">
       <h1>How do I use the app?</h1>
       <h2>Tutorial</h2>
-      <video width="50%" height="auto" controls>
-        <source src="http://twosteptravel.af267.repl.co/DemoLong.mov" type="video/MP4"/>
-        Your browser does not support the video tag.
-      </video>
+      <div class="vidBorder">
+        <video width="100%" height="auto" controls>
+          <source src="http://twosteptravel.af267.repl.co/DemoLong.mov" type="video/MP4"/>
+          Your browser does not support the video tag.
+        </video>
+      </div>
       <h2>Airport map</h2>
       <p>Zoom in on a specific terminal to view terminal details. The map will display the locations of gates and restaurants throughout the terminal.</p>
       <h2>Wait time estimator</h2>
