--- a/index.html
+++ b/index.html
@@ -162,12 +162,13 @@
     </div>
   </div>
   <div class="center">
-    <h2>Demo</h2>
-    <div class="vidBorder">
-      <video width="100%" height="auto" controls>
+    <h2>How We Achieve Simplicity</h2>
+    <div class="vidBorder" style="position: relative">
+      <video height="100%" width="auto" style="z-index: 0; position:absolute; margin: auto; left: 0; right: 0;" controls>
         <source src="http://twosteptravel.af267.repl.co/DemoVid.mov" type="video/MP4"/>
         Your browser does not support the video tag.
       </video>
+      <img src="iphone14.png" style="position: absolute; top: -2%; height: 105%; z-index: 1; margin: auto; left: 0; right: 0; pointer-events: none;"/>
     </div>
   </div>
   <div class="center">
