--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
     <p>Copyright © 2023 TwoStep - All Rights Reserved.</p>
     <p style="padding-bottom:15px">Made with love <span style="font-size:100%;color:#61b3e4;">&hearts;</span> by 5 entrepreneurs <a href="https://launchx.com" target="_blank">@LaunchX</a></p>
   </div>
+  <button class="helpButton" onclick="window.location.href='services.html'">?</button>
 </body>
 
 </html>
