--- a/services.html
+++ b/services.html
@@ -130,7 +130,7 @@
     <div class="qbox" id="q4">
       <h1>How do I use the app?</h1>
       <h2>Tutorial</h2>
-      <div class="vidBorder" style="position: relative">
+      <div class="vidBorder" style="position: relative; margin-bottom: 80px;">
         <video height="100%" width="auto" style="z-index: 0; position:absolute; margin: auto; left: 0; right: 0;" controls>
           <source src="http://twosteptravel.af267.repl.co/DemoLong.mov" type="video/MP4"/>
           Your browser does not support the video tag.
