--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--Copyright © 2023 TwoStep - All Rights Reserved.-->
-<html>
+<html onload="showBar()">
 
 <head>
   <title>TwoStep</title>
@@ -174,6 +174,10 @@
   <div class="center">
     <h2>Starting At</h2>
     <p><span style="font-size: 60px;">$5.00</span> / month</p>
+  </div>
+  <div class="center">
+    <h2>Join our Journey</h2>
+    <button class="donate" onclick="window.location.href='https://www.gofundme.com/f/twostep-revolutionizing-travel-convenience?utm_campaign=p_cp+share-sheet&utm_medium=copy_link_all&utm_source=customer';">Donate Now!</button>
   </div>
   <div class="center">
     <h2>Our Story</h2>
