--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
   </div>
   <div class="center">
     <h2>Join our Journey</h2>
-    <button class="donate" onclick="window.location.href='https://www.gofundme.com/f/twostep-revolutionizing-travel-convenience?utm_campaign=p_cp+share-sheet&utm_medium=copy_link_all&utm_source=customer';">Donate Now!</button>
+    <button class="donate" onclick="window.open('https://www.gofundme.com/f/twostep-revolutionizing-travel-convenience?utm_campaign=p_cp+share-sheet&utm_medium=copy_link_all&utm_source=customer','_blank');">Donate Now!</button>
   </div>
   <div class="center">
     <h2>Our Story</h2>
